Adds meta info.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
 
     <title>Wilks Calculator for powerlifters | Weak Wilks</title>
 
+    <meta property="og:title" content="Weak Wilks">
+    <meta property="og:description" content="Calculates a powerlifter's Wilks score and has fun doing it.">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://chrisbauer.org">
+
   </head>
   <body>
     <div id="app"></div>
