Use the actual url.

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta property="og:title" content="Weak Wilks">
     <meta property="og:description" content="Calculates a powerlifter's Wilks score and has fun doing it.">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://chrisbauer.org">
+    <meta property="og:url" content="https://weakwilks.com">
 
   </head>
   <body>
