Add meta info, mobile browser chrome color.

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Roboto:300,400,500,700,400italic">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=News+Cycle:700">
     <link rel="stylesheet" href="//fonts.googleapis.com/icon?family=Material+Icons">
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -13,7 +14,9 @@
     <meta property="og:description" content="Calculates a powerlifter's Wilks score and has fun doing it.">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://weakwilks.com">
+    <meta property="og:image" content="/dist/weakwilks-logo.png">
 
+    <meta name="theme-color" content="#ff4081">
   </head>
   <body>
     <div id="app"></div>
